[package]
name = "envlock"
version = "0.1.0"
edition = "2021"
description = "Store env vars in macOS Keychain, inject them only into a child process"
license = "MIT"

[dependencies]
serde_json = "1"
rpassword = "=7.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[profile.release]
strip = true
lto = true
